@@ -3760,7 +3760,10 @@ sub scan_one_configure_file
 	{
 	    $configure_vars{$3} = 1;
 	}
-	if (/$AC_SUBST_PATTERN/o)
+
+	# Explicitly avoid ANSI2KNR -- we AC_SUBST that in protos.m4,
+	# but later define it elsewhere.  This is pretty hacky.
+	if (/$AC_SUBST_PATTERN/o && $1 ne 'ANSI2KNR')
 	{
 	    $configure_vars{$1} = 1;
 	}
