@@ -1,5 +1,8 @@
 Tue Mar 25 22:09:45 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (scan_one_configure_file): Don't define ANSI2KNR as
+	a configure varriable.
+
 	* m4/missing.m4: Run test in a subshell.  From Gord Matzigkeit.
 
 Mon Mar 24 23:28:59 1997  Tom Tromey  <tromey@cygnus.com>
